@@ -1464,6 +1464,10 @@ Fri May 30 10:29:49 CEST 2003
 	- Synced parser.
 	- Added a dummy rule for EXEC SQL DESCRIBE that throws an error
 	  message.
+	  
+Fri May 30 15:19:39 CEST 2003
+
+	- Implemented prototype describe function.
 	- Some minor cleanup/bug fixing.
 	- Set ecpg version to 2.12.0.
 	- Set ecpg library to 3.4.2.
